--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
       - name: Build the Docker image
-        run: docker build -t Grome-Backend .
+        run: docker build -t grome-backend .
       - name: Push to Dockerhub
         run: docker push 43152933/grome-backend:latest
 
