--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
+    "@types/glob": "^9.0.0",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/multer-s3": "^3.0.0",
