--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       "@/schemas/*": ["src/schemas/*"],
       "@/dto/*": ["src/dto/*"]
     },
-    "types": ["node", "glob"]
+    "types": ["node"]
   }
 }
