--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.20",
     "@nestjs/platform-socket.io": "^10.2.8",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/throttler": "^5.0.1",
@@ -73,16 +73,17 @@
     "redis": "^4.6.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.7.4",
     "stripe": "^14.9.0",
     "uuid": "^9.0.1",
-    "winston": "^3.11.0",
-    "serverless-http": "^3.2.0"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/aws-lambda": "^8.10.130",
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
@@ -97,7 +98,6 @@
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.7",
-    "@types/aws-lambda": "^8.10.130",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
